<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<!--toolbar-->
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tool_bar"
        android:background="@drawable/actionbar_background"></android.support.v7.widget.Toolbar>
<!--地图-->
    <RelativeLayout
        android:id="@+id/main_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11">
        <com.esri.android.map.MapView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </com.esri.android.map.MapView>
        <ImageButton
            android:id="@+id/get_length"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/dis"
            android:padding="5dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:scaleType="centerInside"
            />
        <ImageButton
            android:id="@+id/zoom_in"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/plus"
            android:padding="10dp"
            android:scaleType="centerInside"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp"
            android:layout_marginRight="10dp"
            android:background="#ffffff"
            />
        <ImageButton
            android:id="@+id/zoom_out"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/minus"
            android:padding="10dp"
            android:scaleType="centerInside"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:background="#ffffff"
            />
        <ImageButton
            android:id="@+id/find_loc"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="5dp"
            android:src="@mipmap/oloc2"
            android:scaleType="centerInside"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:background="#ffffff"/>
    </RelativeLayout>

<!--底部菜单栏-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="#ffffff"
        >
        <!--主页-->
        <LinearLayout
                android:id="@+id/index"
                android:layout_width="0dp"
            android:orientation="vertical"
                android:layout_height="match_parent"
                android:layout_weight="1"

                >
            <ImageView
                android:id="@+id/image_index"
                android:layout_width="40dp"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="2"
                android:src="@mipmap/index_page"/>
            <TextView
                android:id="@+id/text_index"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/index"
                android:textSize="12sp"
                android:textColor="#86000000"
                android:layout_gravity="center"/>
                </LinearLayout>
        <!--随手拍-->
        <LinearLayout
            android:id="@+id/photo"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/image_photo"
                android:layout_width="40dp"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="2"
                android:src="@mipmap/photo"/>
            <TextView
                android:id="@+id/text_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photo"
                android:textSize="12sp"
                android:textColor="#86000000"
                android:layout_gravity="center"/>
            </LinearLayout>
        <!--中部菜单栏加号-->
        <LinearLayout
            android:id="@+id/plus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >
            <ImageView
                android:id="@+id/plus_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/plus"/>
        </LinearLayout>
        <!--消息-->
        <LinearLayout
            android:id="@+id/msg"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/image_msg"
                android:layout_width="40dp"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="2"
                android:src="@mipmap/message"/>
            <TextView
                android:id="@+id/text_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg"
                android:textSize="12sp"
                android:textColor="#86000000"
                android:layout_gravity="center"/>
            </LinearLayout>
        <!--自己-->
        <LinearLayout
            android:id="@+id/me"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/image_me"
                android:layout_width="40dp"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="2"
                android:src="@mipmap/me"/>
            <TextView
                android:id="@+id/text_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/me"
                android:textSize="12sp"
                android:textColor="#86000000"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

